<?xml version = "1.0" encoding = "utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/rrr"
    android:gravity="center"
    tools:context=".Registration">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="Registration"
        android:textColor="@android:color/black"
        android:textSize="40dp" />


    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="291dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:drawableLeft="@drawable/user"
        android:hint="@string/username"
        android:paddingLeft="2dp" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="291dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/pass"
        android:hint="@string/password"
        android:inputType="textPassword" />
    <EditText
        android:id="@+id/edittext_cnf_password"
        android:layout_width="291dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:drawableLeft="@drawable/pass"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />
    <androidx.cardview.widget.CardView
        android:layout_width="271dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="92dp"
            android:gravity="center">
    <Button
        android:id="@+id/button_register"
        android:layout_width="224dp"
        android:layout_height="61dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/colors_mix"
        android:text="@string/register"
        android:textSize="30dp" />
</LinearLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="@android:color/black"
            android:text="@string/already_registered"
            />

        <TextView
            android:id="@+id/textview_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@android:color/holo_red_light"
            android:text="@string/login"
            />

    </LinearLayout>

</LinearLayout>