<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/rrr"
    android:gravity="center"
    tools:context=".Login">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:text="Log In"
        android:textColor="@android:color/black"
        android:textSize="40dp"
        android:textStyle="bold" />



    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="291dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="2dp"
        android:drawableLeft="@drawable/user"
        android:hint="@string/username"
        />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="291dp"

        android:layout_height="40dp"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/pass"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password"/>

 <androidx.cardview.widget.CardView
     android:layout_width="243dp"

     android:layout_height="105dp">

     <LinearLayout
         android:layout_width="241dp"
         android:layout_height="wrap_content"
         android:gravity="center">

    <Button
        android:id="@+id/button_login"
        android:layout_width="190dp"
        android:layout_height="64dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/colors_mix"
        android:text="@string/login"
        android:textSize="30dp" />
     </LinearLayout>
 </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="@android:color/black"
            android:text="@string/not_register"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_red_light"
            android:text="@string/register"
            />

    </LinearLayout>


</LinearLayout>